--- a/defense.htm
+++ b/defense.htm
@@ -1384,11 +1384,10 @@ arguably the only sane usage of coming out after a pass.
           Dbl
          </td>
          <td>
-          !TRF, 4+
+          !CONST TRF, 4+
           <span class="hcolor">
            &hearts;
           </span>
-          , 12&ndash;16 HCP
          </td>
         </tr>
        </table>
@@ -1403,11 +1402,10 @@ arguably the only sane usage of coming out after a pass.
           </span>
          </td>
          <td>
-          !TRF, 4+
+          !CONST TRF, 4+
           <span class="scolor">
            &spades;
           </span>
-          , 12&ndash;16 HCP
          </td>
         </tr>
        </table>
@@ -1422,11 +1420,11 @@ arguably the only sane usage of coming out after a pass.
           </span>
          </td>
          <td>
-          !NF, 4+
+          !PRE, 4+
           <span class="hcolor">
            &hearts;
           </span>
-          , 4+m, 5&ndash;11 HCP
+          , 4+m
          </td>
         </tr>
        </table>
@@ -1441,11 +1439,11 @@ arguably the only sane usage of coming out after a pass.
           </span>
          </td>
          <td>
-          !NF, 4+
+          !PRE, 4+
           <span class="scolor">
            &spades;
           </span>
-          , 4+m, 5&ndash;11 HCP
+          , 4+m
          </td>
         </tr>
        </table>
@@ -1457,7 +1455,7 @@ arguably the only sane usage of coming out after a pass.
           1NT
          </td>
          <td>
-          !NF, 4+
+          !PRE, 4+
           <span class="scolor">
            &spades;
           </span>
@@ -1473,7 +1471,6 @@ arguably the only sane usage of coming out after a pass.
           <span class="ccolor">
            &clubs;
           </span>
-          , 5&ndash;11 HCP
          </td>
         </tr>
        </table>
@@ -1485,7 +1482,7 @@ arguably the only sane usage of coming out after a pass.
           2X
          </td>
          <td>
-          5+#, 5&ndash;11 HCP
+          PRE 5+#
          </td>
         </tr>
        </table>
@@ -1513,11 +1510,10 @@ arguably the only sane usage of coming out after a pass.
           </span>
          </td>
          <td>
-          !NF (R), 0&ndash;2
+          !NF NEG, 0&ndash;2
           <span class="hcolor">
            &hearts;
           </span>
-          , 0&ndash;10 HCP
          </td>
         </tr>
        </table>
@@ -1532,11 +1528,10 @@ arguably the only sane usage of coming out after a pass.
           </span>
          </td>
          <td>
-          3+
+          PRE, 3&ndash;4
           <span class="hcolor">
            &hearts;
           </span>
-          , 0&ndash;10 HCP
          </td>
         </tr>
        </table>
@@ -1602,7 +1597,7 @@ arguably the only sane usage of coming out after a pass.
           </span>
          </td>
          <td>
-          !INV+ TRF, 4+
+          !INV+ TRF, 3+
           <span class="hcolor">
            &hearts;
           </span>
@@ -1620,11 +1615,28 @@ arguably the only sane usage of coming out after a pass.
           </span>
          </td>
          <td>
-          4+
+          PRE, 4&ndash;5
           <span class="hcolor">
            &hearts;
           </span>
-          , 0&ndash;10 HCP
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2
+          <span class="scolor">
+           &spades;
+          </span>
+         </td>
+         <td>
+          PRE, 6+
+          <span class="scolor">
+           &spades;
+          </span>
          </td>
         </tr>
        </table>
@@ -1636,7 +1648,51 @@ arguably the only sane usage of coming out after a pass.
           2NT
          </td>
          <td>
-          !INV+, 5+
+          !TRF, FG 6+
+          <span class="ccolor">
+           &clubs;
+          </span>
+          or PRE 7+
+          <span class="ccolor">
+           &clubs;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3
+          <span class="ccolor">
+           &clubs;
+          </span>
+         </td>
+         <td>
+          !TRF, FG 6+
+          <span class="dcolor">
+           &diams;
+          </span>
+          or PRE 7+
+          <span class="dcolor">
+           &diams;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3
+          <span class="dcolor">
+           &diams;
+          </span>
+         </td>
+         <td>
+          !TRF, mixed raise, UNBAL 4+
           <span class="hcolor">
            &hearts;
           </span>
@@ -1654,11 +1710,10 @@ arguably the only sane usage of coming out after a pass.
           </span>
          </td>
          <td>
-          5+
+          PRE, UNBAL 5+
           <span class="hcolor">
            &hearts;
           </span>
-          , 0&ndash;10 HCP
          </td>
         </tr>
        </table>
@@ -1689,11 +1744,10 @@ arguably the only sane usage of coming out after a pass.
           </span>
          </td>
          <td>
-          !NF (R), 0&ndash;2
+          !NF NEG, 0&ndash;2
           <span class="scolor">
            &spades;
           </span>
-          , 0&ndash;10 HCP
          </td>
         </tr>
        </table>
@@ -1708,11 +1762,10 @@ arguably the only sane usage of coming out after a pass.
           </span>
          </td>
          <td>
-          3+
+          PRE, 3&ndash;4
           <span class="scolor">
            &spades;
           </span>
-          , 0&ndash;10 HCP
          </td>
         </tr>
        </table>
@@ -1796,11 +1849,10 @@ arguably the only sane usage of coming out after a pass.
           </span>
          </td>
          <td>
-          4+
+          PRE, 4&ndash;5
           <span class="scolor">
            &spades;
           </span>
-          , 0&ndash;10 HCP
          </td>
         </tr>
        </table>
@@ -1812,7 +1864,73 @@ arguably the only sane usage of coming out after a pass.
           2NT
          </td>
          <td>
-          !INV+, 5+
+          !TRF, FG 6+
+          <span class="ccolor">
+           &clubs;
+          </span>
+          or PRE 7+
+          <span class="ccolor">
+           &clubs;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3
+          <span class="ccolor">
+           &clubs;
+          </span>
+         </td>
+         <td>
+          !TRF, FG 6+
+          <span class="dcolor">
+           &diams;
+          </span>
+          or PRE 7+
+          <span class="dcolor">
+           &diams;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3
+          <span class="dcolor">
+           &diams;
+          </span>
+         </td>
+         <td>
+          !TRF, FG 6+
+          <span class="hcolor">
+           &hearts;
+          </span>
+          or PRE 7+
+          <span class="hcolor">
+           &hearts;
+          </span>
+         </td>
+        </tr>
+       </table>
+      </li>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          3
+          <span class="hcolor">
+           &hearts;
+          </span>
+         </td>
+         <td>
+          !TRF, mixed raise, UNBAL 4+
           <span class="scolor">
            &spades;
           </span>
@@ -1830,11 +1948,10 @@ arguably the only sane usage of coming out after a pass.
           </span>
          </td>
          <td>
-          5+
+          PRE, UNBAL 5+
           <span class="scolor">
            &spades;
           </span>
-          , 0&ndash;10 HCP
          </td>
         </tr>
        </table>
