--- a/wj.htm
+++ b/wj.htm
@@ -11448,6 +11448,10 @@ use reverse Bergen raises for hearts for several reasons:
    Strong notrump opening
   </h1>
   <p>
+   This bidding system has a strong notrump opening (14+ HCP) that does not
+contain a 5-card major.
+  </p>
+  <p>
    We use the French-style 4-way transfers to preserve the natural invitation.  We
 invite naturally rather than via Stayman because 2NT hides information of the
 declarer.
@@ -11835,22 +11839,7 @@ Garbage Stayman.
     INV+, unspecified 4+M
    </li>
    <li>
-    WK, 4=
-    <span class="scolor">
-     &spades;
-    </span>
-    , 4=
-    <span class="hcolor">
-     &hearts;
-    </span>
-    , 4&ndash;5
-    <span class="dcolor">
-     &diams;
-    </span>
-    , 0&ndash;1
-    <span class="ccolor">
-     &clubs;
-    </span>
+    Weak T/O with short clubs
    </li>
   </ul>
   <div class="tree">
@@ -11871,7 +11860,7 @@ Garbage Stayman.
           </span>
          </td>
          <td>
-          ! 2&ndash;3
+          !NF, 2&ndash;3
           <span class="scolor">
            &spades;
           </span>
@@ -11893,15 +11882,19 @@ Garbage Stayman.
           </span>
          </td>
          <td>
-          4=
+          NF, 4=
           <span class="hcolor">
            &hearts;
+          </span>
+          , 2&ndash;3
+          <span class="scolor">
+           &spades;
           </span>
          </td>
         </tr>
        </table>
       </li>
-      <li class="last node">
+      <li class="node">
        <table>
         <tr>
          <td class="node" rowspan="1">
@@ -11911,7 +11904,7 @@ Garbage Stayman.
           </span>
          </td>
          <td>
-          4=
+          NF, 4=
           <span class="scolor">
            &spades;
           </span>
@@ -11923,60 +11916,29 @@ Garbage Stayman.
         </tr>
        </table>
       </li>
-     </ul>
-    </li>
-   </ul>
-  </div>
-  <p>
-   The Garbage Stayman takes advantage of that opener will eventually rebid within
-2
-   <span class="scolor">
-    &spades;
-   </span>
-   <span class="hcolor">
-    &hearts;
-   </span>
-   <span class="dcolor">
-    &diams;
-   </span>
-   , so we can bid 2
-   <span class="ccolor">
-    &clubs;
-   </span>
-   as a weak takeout of clubs and pass in the next round.
-  </p>
-  <div class="tree">
-   <ul>
-    <li class="root">
-     1NT-2
-     <span class="ccolor">
-      &clubs;
-     </span>
-     -2X
-     <ul>
+      <li class="node">
+       <table>
+        <tr>
+         <td class="node" rowspan="1">
+          2NT
+         </td>
+         <td>
+          !MIN, 44(xx)
+         </td>
+        </tr>
+       </table>
+      </li>
       <li class="last node">
        <table>
         <tr>
          <td class="node" rowspan="1">
-          Pass
-         </td>
-         <td>
-          WK, 4=
-          <span class="scolor">
-           &spades;
-          </span>
-          , 4=
-          <span class="hcolor">
-           &hearts;
-          </span>
-          , 4&ndash;5
-          <span class="dcolor">
-           &diams;
-          </span>
-          , 0&ndash;1
+          3
           <span class="ccolor">
            &clubs;
           </span>
+         </td>
+         <td>
+          !MAX, 44(xx)
          </td>
         </tr>
        </table>
